[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Mina.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mine.png" type="Texture" id=2]
[ext_resource path="res://SFX/mine_tick.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.014, 2.548 )

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "tick"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 30.0

[node name="Mina" type="StaticBody2D" groups=["Destruible", "No_Explotable"]]
z_index = -1
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." groups=["Destruible"]]
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.452 )
shape = SubResource( 1 )

[node name="TiempoExpiracion" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="TiempoExplosion" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/tick = SubResource( 3 )

[node name="Sonido_Tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="RadioExplosion" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadioExplosion"]
shape = SubResource( 4 )

[connection signal="timeout" from="TiempoExpiracion" to="." method="_on_TiempoExpiracion_timeout"]
[connection signal="timeout" from="TiempoExplosion" to="." method="_on_TiempoExplosion_timeout"]
